<resources>
    <string name="app_name">Tamagotchi</string>
    <string name="Settings">Settings</string>
    <string name="Play">Play</string>
    <string name="GoPnl1">Home</string>
    <string name="GoPnl2">Game</string>
    <string name="GoPnl3">Settings</string>
    <string name="Smoke">Smoke</string>
    <string name="Eat">Fast-Food</string>
    <string name="Drugs">Drugs</string>
    <string name="Affichage">Message</string>
    <string name="Faim">Faim</string>
    <string name="Bonheur">Bonheur</string>
    <string name="Config">Configuration</string>
    <string name="NameTamagotchi">Nom du tamagotchi :</string>
    <string name="Name">Votre nom :</string>
    <string name="InputTamagotchi">Entrez le nom du tamagotchi...</string>
    <string name="InputPlayer">Entrez le nom du joueur...</string>
</resources>