<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A4747"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="29dp" />

    <TextView
        android:id="@+id/Configuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/Config"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="36sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="316dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Nom_tamagotchi"
            android:layout_width="191dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:gravity="center_vertical"
            android:text="@string/NameTamagotchi"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/inputTamagotchiName"
            android:layout_width="183dp"
            android:layout_height="55dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:gravity="center_vertical"
            android:inputType="text"
            android:text="@string/InputTamagotchi"
            android:textColor="#888282"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/PlayerName"
            android:layout_width="299dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:gravity="center_vertical"
            android:text="@string/Name"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/inputPlayerName"
            android:layout_width="294dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:gravity="center_vertical"
            android:inputType="text"
            android:text="@string/InputPlayer"
            android:textColor="#888282"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:id="@+id/ResetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="casual"
        android:text="@string/Reset"
        app:backgroundTint="#439775" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <Button
        android:id="@+id/btnGotoPnl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:fontFamily="casual"
        android:text="@string/GoPnl1"
        app:backgroundTint="#4F517D"
        app:icon="@drawable/west_white_24dp" />

</LinearLayout>