<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2a4747"
    android:gravity="center"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="58dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000B0B0B"
        android:fontFamily="casual"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="57dp" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="338dp"
        android:layout_height="392dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:srcCompat="@drawable/humpty_dumpty" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="41dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Space
            android:layout_width="20dp"
            android:layout_height="47dp"
            android:layout_gravity="start"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnGotoPnl2"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/Play"
            android:textColor="@color/white"
            android:textColorHighlight="#48BF84"
            android:textSize="18sp"
            app:backgroundTint="#439775" />

        <Space
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:layout_gravity="center|top"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnGotoPnl3"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/Settings"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:backgroundTint="#439775" />

        <Space
            android:layout_width="20dp"
            android:layout_height="49dp"
            android:layout_gravity="end"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>